# appleseed-maya

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  releaseNotes.txt
src/: CMakeLists.txt  appleseed.cpp  appleseed.h  appleseedcamera.cpp  appleseedconfig.cpp  appleseedcreateoslshader.cpp  appleseedframeoutput.cpp  appleseedgeo.cpp  appleseedinteractiveupdate.cpp  appleseedlights.cpp  appleseedmaterial.cpp  appleseedmaya.cpp  appleseedmaya.h  appleseedmeshwalker.cpp  appleseedmeshwalker.h  appleseedrenderer.cpp  appleseedrenderer.h  appleseedrendererfactory.cpp  appleseedswatchrenderer.cpp  appleseedswatchrenderer.h  appleseedupdateelements.cpp  appleseedutils.cpp  appleseedutils.h  binmeshreadercmd.cpp  binmeshreadercmd.h  binmeshtranslator.cpp  binmeshtranslator.h  binmeshwritercmd.cpp  binmeshwritercmd.h  definitions.h  event.h  globalsnode.cpp  globalsnode.h  hypershaderenderer.cpp  hypershaderenderer.h  mayaheaderguards.h  mayaobject.cpp  mayaobject.h  mayaobjectfactory.h  mayarenderglobalsnode.cpp  (+60 more)
src/appleseed/: appleseed.cpp  appleseed.h  appleseedConfig.cpp  appleseedEnvironment.cpp  appleseedFrameOutput.cpp  appleseedGeo.cpp  appleseedGeometry.cpp  appleseedGeometry.h  appleseedInteractiveUpdate.cpp  appleseedLights.cpp  appleseedMaterial.cpp  appleseedUpdateElements.cpp  appleseedUtils.cpp  appleseedUtils.h  appleseedcamera.cpp  appleseedconfig.cpp  appleseedcreateoslshader.cpp  appleseedenvironment.cpp  appleseedframeoutput.cpp  appleseedgeo.cpp  appleseedinteractiveupdate.cpp  appleseedlights.cpp  appleseedmaterial.cpp  appleseedmeshwalker.cpp  appleseedrendererfactory.cpp  appleseedshaders.cpp  appleseedshadingnodes.cpp  appleseedupdateelements.cpp  appleseedutils.cpp  appleseedutils.h  mtap_renderercontroller.cpp  mtap_tileCallback.cpp  mtap_tilecallback.cpp  testrender.cpp  version.h
src/appleseed-maya/: CMakeLists.txt  appleseed.cpp  appleseed.h  appleseedcamera.cpp  appleseedconfig.cpp  appleseedcreateoslshader.cpp  appleseedenvironment.cpp  appleseedframeoutput.cpp  appleseedgeo.cpp  appleseedgeometry.cpp  appleseedgeometry.h  appleseedinteractiveupdate.cpp  appleseedlights.cpp  appleseedmaterial.cpp  appleseedmaterial.h  appleseedmeshwalker.cpp  appleseedmeshwalker.h  appleseedrendererfactory.cpp  appleseedupdateelements.cpp  appleseedutils.cpp  appleseedutils.h  mayatoappleseed.cpp  mayatoappleseed.h  mtap_material.h  mtap_mayaobject.cpp  mtap_mayaobject.h  mtap_mayaobjectfactory.cpp  mtap_mayarenderer.cpp  mtap_mayarenderer.h  mtap_renderercontroller.cpp  mtap_renderercontroller.h  mtap_renderglobals.cpp  mtap_renderglobalsnode.cpp  mtap_renderglobalsnode.h  mtap_shadingnode.h  mtap_standinlocator.cpp  mtap_standinlocator.h  mtap_standinmeshnode.cpp  mtap_standinmeshnode.h  mtap_swatchrenderer.cpp  (+8 more)
src/appleseed-maya/shaders/: asdisneymaterial.cpp  asdisneymaterial.h  asdisneymaterialoverride.cpp  asdisneymaterialoverride.h  aslayeredshader.cpp  aslayeredshader.h
src/appleseed-maya/swatchesrenderer/: appleseedswatchrenderer.cpp  appleseedswatchrenderer.h  newswatchrenderer.cpp  swatchesevent.cpp  swatchesevent.h
src/appleseed-tools/: CMakeLists.txt  binmeshreadercmd.cpp  binmeshreadercmd.h  binmeshtranslator.cpp  binmeshtranslator.h  binmeshwritercmd.cpp  binmeshwritercmd.h  proxymesh.cpp  proxymesh.h  toolspluginmain.cpp
src/appleseedtools/: CMakeLists.txt  binmeshreadercmd.cpp  binmeshreadercmd.h  binmeshtranslator.cpp  binmeshtranslator.h  binmeshwritercmd.cpp  toolspluginmain.cpp
src/mayarendernodes/: mayarenderglobalsnode.cpp  mayarenderglobalsnode.h  rendercmd.h  renderglobalsnode.cpp  standinlocatornode.cpp  standinlocatornode.h  standinmeshnode.cpp  standinmeshnode.h
src/mayatocommon/: CMakeLists.txt  definitions.h  mayaobject.cpp  mayaobject.h  mayaobjectfactory.h  mayascene.cpp  mayascene.h  mayascenefactory.cpp  mayascenefactory.h  mayasceneparsing.cpp  mayasceneutils.cpp  renderglobals.cpp  renderglobals.h  renderglobalsfactory.cpp  renderglobalsfactory.h  renderprocess.cpp  renderprocess.h  world.cpp  world.h
src/mtap_common/: mtap_mayaRenderer.cpp  mtap_mayaobject.cpp  mtap_mayaobject.h  mtap_mayaobjectfactory.cpp  mtap_mayarenderer.cpp  mtap_mayarenderer.h  mtap_mayascene.cpp  mtap_mayascene.h  mtap_renderGlobalsNode.cpp  mtap_renderglobals.cpp  mtap_renderglobals.h  mtap_renderglobalsnode.cpp  mtap_renderglobalsnode.h  mtap_shadingnode.cpp  mtap_standinlocator.cpp  mtap_swatchrenderer.cpp  mtap_swatchrenderer.h  mtap_swatchrendererinterfacefactory.cpp  mtap_world.cpp
src/osl/: oslutils.cpp  oslutils.h
src/rendererplugin/: CMakeLists.txt  appleseed.cpp  appleseed.h  appleseedcamera.cpp  appleseedconfig.cpp  appleseedenvironment.cpp  appleseedframeoutput.cpp  appleseedgeo.cpp  appleseedgeometry.cpp  appleseedinteractiveupdate.cpp  appleseedmaterial.cpp  appleseedmaterial.h  appleseedmeshwalker.cpp  appleseedmeshwalker.h  appleseedrendererfactory.cpp  appleseedupdateelements.cpp  appleseedutils.cpp  mayatoappleseed.h  mtap_material.h  mtap_mayaobject.cpp  mtap_mayaobjectfactory.cpp  mtap_mayarenderer.cpp  mtap_mayarenderer.h  mtap_renderercontroller.h  mtap_shadingnode.cpp  mtap_shadingnode.h  mtap_standinlocator.h  mtap_standinmeshnode.cpp  mtap_swatchrenderer.cpp  mtap_swatchrenderer.h  mtap_tilecallback.cpp  mtap_tilecallback.h  mtap_world.cpp  pluginmain.cpp
src/rendering/: renderer.cpp
src/shaders/: asdisneymaterial.cpp  asdisneymaterial.h  asdisneymaterialoverride.cpp  asdisneymaterialoverride.h  aslayeredshader.cpp  aslayeredshader.h
src/shadingtools/: material.cpp  material.h  shaderdefinitions.cpp  shaderdefinitions.h  shadingnode.cpp  shadingnode.h  shadingutils.cpp  shadingutils.h
src/swatchesrenderer/: appleseedswatchrenderer.cpp  appleseedswatchrenderer.h  newswatchrenderer.cpp  newswatchrenderer.h  swatchesevent.h  swatchrendererinterface.h
src/threads/: compute.h  event.h  queue.h  renderqueueworker.cpp  renderqueueworker.h
src/utilities/: attrtools.cpp  attrtools.h  concurrentqueue.h  logging.cpp  logging.h  meshtools.cpp  meshtools.h  oslutils.cpp  oslutils.h  tools.cpp  tools.h
(+317 files in other folders)
